# conways-game-of-life

./: CMakeLists.txt
include/: cell.h
src/: cell.cxx  main.cxx
